02ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/alt-names: argocd.cloud.zack.gg
    certmanager.k8s.io/common-name: argocd.cloud.zack.gg
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

    # If you encounter a redirect loop or are getting a 307 response code 
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: argocd.cloud.zack.gg
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: http
        path: /
  tls:
  - hosts:
    - argocd.cloud.zack.gg
    secretName: argocd-secret # do not change, this is provided by Argo CD
